--- a/jWooHome.html
+++ b/jWooHome.html
@@ -18,7 +18,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="jWooHome.html" title="goHome">Home</a>
+					<a class="navbar-brand" href="index.html" title="goHome">Home</a>
 				</div>
 				<div class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
@@ -38,7 +38,7 @@
 
 		<div class="container">
 			<div class="page-header">
-				<h1>About me <img src="/Users/jwoo/Documents/gitPortfolio/jWoo.jpg" alt="Profile picture" height="300"/></h1>
+				<h1>About me <img src="jWoo.jpg" alt="Profile picture" height="300"/></h1>
 			</div>
 
 			<p>
