--- a/jWooVideos.html
+++ b/jWooVideos.html
@@ -18,7 +18,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="jWooHome.html" title="goHome">Home</a>
+					<a class="navbar-brand" href="index.html" title="goHome">Home</a>
 				</div>
 				<div class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
