--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Jae Whan Woo</title>
-		<link rel="stylesheet" href="/var/www/html/bootstrap-3.3.6-dist/css/bootstrap.min.css">
+		<link rel="stylesheet" href="/var/www/html/bootstrap-3.3.6-dist/CSS/bootstrap.min.css">
 
  	</head>
 	<body>
