--- a/jWooVideos.html
+++ b/jWooVideos.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Jae Whan Woo</title>
-		<link rel="stylesheet" href="/Users/jwoo/Documents/bootstrap-3.3.6-dist/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
  	</head>
 	<body>
@@ -44,7 +44,7 @@
 		</div>
 		
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-		<script src="/Users/jwoo/Documents/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 	</body>
 </html>
