begun implementing academic project updates

--- a/jWooPortfolio.html
+++ b/jWooPortfolio.html
@@ -43,8 +43,12 @@
 
 		</div>
 		
+		<ul>
+			<li><a href="/umbcWebDevProj/IS448-GroupProject/groupProject/indexed.html">Online Point Of Sale web application (Academic Project)</a></li>
+		</ul>
+
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-		
+
 	</body>
 </html>
