updated index page

--- a/index.html
+++ b/index.html
@@ -44,11 +44,13 @@
 			<p>
 				So a little bit about myself. My name is Jae Whan Woo, but I go by Joseph or Joe! I have a love for computers and information technology. I built my PC desktop in 2014. I picked out the parts that I did to specialize it in video gaming. 
 
-				I've been trouble shooting computers since I was in high school, mostly for my parents. I was able to develop these skills further while I was interning at ADG Creative. I interned there as a system administrator for 11 months. It was a great experience and I've learned a great deal while I was there.
+				I've been trouble shooting computers since I was in high school, for my parents and myself. I was able to develop these skills further while I was interning at ADG Creative. I interned there as a system administrator for 11 months. It was a great experience and I've learned a great deal while I was there.
 
 				My experience at ADG made me realize that I can pursue my passion if I put in the effort, that passion being web development! I was very fortunate to have met the people that I did. While I had been self-studying back-end development for a year prior, the members of the dev team were very helpful and taught me many things regarding the processes behind web development that I would not have been able to find online.
 
-				Other than that, I also have a love for music. I picked up the guitar when I was 12 years old and have been playing casually ever since. When I turned 19, however, I decided to take it a tad more seriously and started to learn fingerstyle pieces! I produce covers of pieces that I really enjoy listening to and share videos with friends and family! You can view these videos <a href="">here</a> if you'd like! 
+				I spend a fair amount of my free time reading up on web development to improve my skills. I'm more comfortable with back-end code rather than front-end, but I'm capable of front-end coding. I'm confident in the abilities I have developed so far, but I'm always ready to learn new things. It has truly become a passion of mine.
+
+				Other than that, I also have a love for music. I picked up the guitar when I was 12 years old and have been playing casually ever since. When I turned 19, however, I decided to take it a tad more seriously and started to learn fingerstyle pieces! I produce covers of pieces that I really enjoy listening to. I share these videos with friends and family! You can view these videos <a href="">here</a> if you'd like! (There's a link in the navigation bar at the top!)
 
 				That's pretty much what I'm all about. My skills and interests, at least. If you think I'd be an asset to your dev team please reach out via my <a href="https://www.linkedin.com/in/jae-whan-joseph-woo-307547111?trk=hp-identity-name">linkedin</a> account or email me at jwoo896@gmail.com. Thank you for checking out my portfolio page!
 			</p>
