--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 				My experience at ADG made me realize that I can pursue my passion if I put in the effort, that passion being web development! I was very fortunate to have met the people that I did. While I had been self-studying back-end development for a year prior, the members of the dev team were very helpful and taught me many things regarding the processes behind web development that I would not have been able to find online.<br/>
 
-				I spend a fair amount of my free time reading up on web development to improve my skills. I'm more comfortable with back-end code rather than front-end, but I'm capable of front-end coding. I'm confident in the abilities I have developed so far, but I'm always ready to learn new things. It has truly become a passion of mine.
+				I spend a fair amount of my free time reading up on web development to improve my skills. I'm more comfortable with back-end code rather than front-end, but I'm capable of front-end coding. I'm confident in the abilities I have developed so far, but I'm always ready to learn new things. It has truly become a passion of mine.<br/>
 
 				Other than that, I also have a love for music. I picked up the guitar when I was 12 years old and have been playing casually ever since. When I turned 19, however, I decided to take it a tad more seriously and started to learn fingerstyle pieces! I produce covers of pieces that I really enjoy listening to. I share these videos with friends and family! You can view these videos <a href="">here</a> if you'd like! (There's a link in the navigation bar at the top!)<br/>
 
