trying to indent

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 			</div>
 
 			<p>
-				So a little bit about myself. My name is Jae Whan Woo, but I go by Joseph or Joe! I have a love for computers and information technology. I built my PC desktop in 2014. I picked out the parts that I did to specialize it in video gaming.<br/> 
+				    So a little bit about myself. My name is Jae Whan Woo, 
+				but I go by Joseph or Joe! I have a love for computers and information technology. I built my PC desktop in 2014. I picked out the parts that I did to specialize it in video gaming.<br/> 
 
 				I've been trouble shooting computers since I was in high school, for my parents and myself. I was able to develop these skills further while I was interning at ADG Creative. I interned there as a system administrator for 11 months. It was a great experience and I've learned a great deal while I was there.<br/>
 
