trying spans for idents

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 				<h1>About me <img src="jWoo.jpg" alt="Profile picture" height="300"/></h1>
 			</div>
 
-			<p style="text-indent:50px">
-				So a little bit about myself. My name is Jae Whan Woo, 
-				but I go by Joseph or Joe! I have a love for computers and information technology. I built my PC desktop in 2014. I picked out the parts that I did to specialize it in video gaming.<br/> 
+			<p>
+				<span style="text-indent:50px">So a little bit about myself. My name is Jae Whan Woo, 
+				but I go by Joseph or Joe! I have a love for computers and information technology. I built my PC desktop in 2014. I picked out the parts that I did to specialize it in video gaming.</span> 
 
-				I've been trouble shooting computers since I was in high school, for my parents and myself. I was able to develop these skills further while I was interning at ADG Creative. I interned there as a system administrator for 11 months. It was a great experience and I've learned a great deal while I was there.<br/>
+				<span style="text-indent:50px">I've been trouble shooting computers since I was in high school, for my parents and myself. I was able to develop these skills further while I was interning at ADG Creative. I interned there as a system administrator for 11 months. It was a great experience and I've learned a great deal while I was there.</span>
 
 				My experience at ADG made me realize that I can pursue my passion if I put in the effort, that passion being web development! I was very fortunate to have met the people that I did. While I had been self-studying back-end development for a year prior, the members of the dev team were very helpful and taught me many things regarding the processes behind web development that I would not have been able to find online.<br/>
 
