--- a/jWooExp.html
+++ b/jWooExp.html
@@ -38,10 +38,10 @@
 
 		<div class="container">
 			<div class="page-header">
-				<h1>Experience</h1>
+				<h1>Experience and Skills</h1>
 			</div>
-			<p>
-				
+			<p style="text-indent:50px">
+				I started teaching myself web development in 2015. It was mostly for fun but as I improved I also grew to love it. I am confident in my back-end coding skills. The languages I use are PHP and MYSQL/MYSQLI. I've also dabbled in some PL/SQL. 
 			</p>
 		</div>
 		
