--- a/jWooExp.html
+++ b/jWooExp.html
@@ -41,8 +41,21 @@
 				<h1>Experience and Skills</h1>
 			</div>
 			<p style="text-indent:50px">
-				I started teaching myself web development in 2015. It was mostly for fun but as I improved I also grew to love it. I am confident in my back-end coding skills. The languages I use are PHP and MYSQL/MYSQLI. I've also dabbled in some PL/SQL. 
+				I started teaching myself web development in 2015. It was mostly for fun but as I improved I also grew to love it. I am most confident in my back-end coding skills. I am most proficient with PHP, MySQL, JavaScript, and Java.
 			</p>
+			<p>Skills</p>
+			<ul>
+				<li>HTML5</li>
+				<li>CSS</li>
+				<li>JavaScript</li>
+				<li>PHP</li>
+				<li>MySQL</li>
+				<li>PL/SQL</li>
+				<li>Java</li>
+				<li>JavaFX</li>
+				<li>Linux OS</li>
+				<li>GitHub</li>
+			</ul>
 		</div>
 		
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
