--- a/jWooVideos.html
+++ b/jWooVideos.html
@@ -43,7 +43,7 @@
 
 		</div>
 		<video width="320" height="240" controls>
-  		<source src="ohyah.mp4" type="video/mp4">
+  		<source src="/jwooPortfolio/ohyah.mp4" type="video/mp4">
   		Your browser does not support the video tag.
 		</video>
 		
