--- a/jWooVideos.html
+++ b/jWooVideos.html
@@ -44,7 +44,7 @@
 		</div>
 		<video width="320" height="240" controls>	
   		<source src="ohyah.mp4" type="video/mp4">
-		<source src="obyah.webm" type="video/webm">
+		<source src="ohyah.webm" type="video/webm">
   		Your browser does not support the video tag.
 		</video>
 		
