--- a/jWooVideos.html
+++ b/jWooVideos.html
@@ -42,12 +42,20 @@
 			</div>
 
 		</div>
+
 		<video width="320" height="240" controls>	
   		<source src="ohyah.mp4" type="video/mp4">
 		<source src="ohyah.webm" type="video/webm">
   		Your browser does not support the video tag.
 		</video>
 		
+		<video width="320" height="240" controls>	
+  		<source src="thisbeIT.mp4" type="video/mp4">
+		<source src="thisbeIT.webm" type="video/webm">
+  		Your browser does not support the video tag.
+		</video>
+		
+
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
