--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 				I spend a fair amount of my free time reading up on web development to improve my skills. I'm more comfortable with back-end code rather than front-end, but I'm capable of front-end coding. I'm confident in the abilities I have developed so far, but I'm always ready to learn new things. It has truly become a passion of mine.<br/>
 
-				Other than that, I also have a love for music. I picked up the guitar when I was 12 years old and have been playing casually ever since. When I turned 19, however, I decided to take it a tad more seriously and started to learn fingerstyle pieces! I produce covers of pieces that I really enjoy listening to. I share these videos with friends and family! You can view these videos <a href="jWooVideos.html">here</a> if you'd like! (There's a link in the navigation bar at the top!)<br/>
+				Other than that, I also have a love for music. I picked up the guitar when I was 12 years old and have been playing casually ever since. When I turned 19, however, I decided to take it a tad more seriously and started to learn fingerstyle pieces! I produce covers of pieces that I really enjoy listening to. I share these videos with friends and family! You can view these videos <a href="jwooVideos.html">here</a> if you'd like! (There's also a link in the navigation bar at the top!)<br/>
 
 				That's pretty much what I'm all about. My skills and interests, at least. If you think I'd be an asset to your dev team please reach out via my <a href="https://www.linkedin.com/in/jae-whan-joseph-woo-307547111?trk=hp-identity-name">linkedin</a> account or email me at jwoo896@gmail.com. Thank you for checking out my portfolio page!<br/>
 			</p>
