added a little more text

--- a/jWooExp.html
+++ b/jWooExp.html
@@ -42,8 +42,11 @@
 			</div>
 			<p style="text-indent:50px">
 				I started teaching myself web development in 2015. It was mostly for fun but as I improved I also grew to love it. I am most confident in my back-end coding skills. I am most proficient with PHP, MySQL, JavaScript, and Java.
+
+				I've worked as a System Administrator intern at ADG Creative for 11 months. The skills I've acquired from my time at ADG include system configurations (software installations, OS installations (Windows, Mac, and Linux), and Windows Server 2008 support. 
+				This website is running
 			</p>
-			<p>Skills</p>
+			<p>Skills/Languages</p>
 			<ul>
 				<li>HTML5</li>
 				<li>CSS</li>
