--- a/jWooVideos.html
+++ b/jWooVideos.html
@@ -54,6 +54,18 @@
 		<source src="thisbeIT.webm" type="video/webm">
   		Your browser does not support the video tag.
 		</video>
+
+		<video width="320" height="240" controls>	
+  		<source src="theOne.mp4" type="video/mp4">
+		<source src="theOne.webm" type="video/webm">
+  		Your browser does not support the video tag.
+		</video>
+
+		<video width="320" height="240" controls>	
+  		<source src="yesyesyesyes.mp4" type="video/mp4">
+		<source src="yesyesyesyes.webm" type="video/webm">
+  		Your browser does not support the video tag.
+		</video>
 		
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
