update index page

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 				<div class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
 						<li>
-							<a href="jWooExp.html">Experience</a>
+							<a href="/jwooPortfolio/jWooExp.html">Experience</a>
 						</li>
 						<li>
-							<a href="jWooPortfolio.html">Portfolio</a>
+							<a href="/jwooPortfolio/jWooPortfolio.html">Portfolio</a>
 						</li>
 						<li>
-							<a href="jWooVideos.html">Fingerstlye Covers</a>
+							<a href="/jwooPortfolio/jWooVideos.html">Fingerstlye Covers</a>
 						<li>
 					</ul>
 				</div>
