--- a/jWooPortfolio.html
+++ b/jWooPortfolio.html
@@ -43,7 +43,7 @@
 
 		</div>
 		
-		<p>
+		<p style="text-indent:50px">
 			<a href="/umbcWebDevProj/IS448-GroupProject/groupProject/indexed.html">Online Point Of Sale web application (Academic Project)</a><br/>
 			This web service was inspired by the purchasing system at ADG Creative's privately owned cafe. ADG's cafe had a paper-based sale system where an employee would take a sheet of paper, after picking out various available items, and jot down each item and the quantity of each item that was taken. The employee would then sign and date the sheet and leave it in a pile. Accountants would then collect the pile, sift through them, and then deduct from appropriate payrolls. 
 
