fixed the action for the index page's form

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<div class="page-header">
 				<h1>Log in</h1>
 			</div>
-			<form name="userLogin" action="credCheck.php" method="post">
+			<form name="userLogin" action="/jwooPortfolio/credCheck.php" method="post">
 				<table>
 					<tr>
 						<td>
